[package]
name = "obs_screens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.8.0", features = ["futures"] }
stylist = { version = "0.12.0", features = ["yew"] }
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
